# sunny-2

./: .gitignore  CI_PROBLEMS_ANALYSIS.md  DATABASE_SERVICES.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DIAGNOSTIC_BACKEND_URL.md  ENV_VARS.md  LICENSE  PRODUCTION_SETUP.md  README.md  SETUP_NEON_UPSTASH.md  TROUBLESHOOTING_BACKEND_URL.md  VERCEL_SETUP.md  VERIFY_DEPLOYMENT.md  bases.md  package-lock.json  package.json  turbo.json  vercel.json
.github/workflows/: ci.yml
_bmad-output/: architecture.md  bmm-workflow-status.yaml  fundamentos-stack.md  prd.md  sprint-backlog.md
_bmad-output/analysis/: brainstorming-session-2025-12-24.md
_bmad-output/project-planning-artifacts/: product-brief-sunny-2-2025-12-24.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
apps/api/: .coverage  Dockerfile  README.md  alembic.ini  package.json  pyproject.toml  railway.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2025_12_29_1843_initial_schema.py  2025_12_29_2100_add_cache_unique_constraint.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  cache.py  circuit_breaker.py  config.py  database.py  metrics.py
apps/api/app/middleware/: __init__.py  auth.py  rate_limit.py
apps/api/app/models/: __init__.py  api_keys.py  base.py  solar_analysis.py
apps/api/app/plugins/: __init__.py  base.py
apps/api/app/plugins/countries/: __init__.py  chile.py  germany.py  global_default.py
apps/api/app/repositories/: __init__.py  api_keys_repository.py  cache_repository.py
apps/api/app/routers/: __init__.py  analyses.py  api_keys.py  cron.py  estimate.py  geosearch.py  health.py  progress.py
apps/api/app/schemas/: __init__.py  estimate.py
apps/api/app/services/: __init__.py  ai_consultant.py  cache_manager.py  copernicus.py  interpolation.py  pvgis.py  solar_calculator.py  solar_data.py
apps/api/scripts/: __init__.py  cleanup_expired_cache.py
apps/api/tests/: __init__.py  test_copernicus.py  test_estimate_api.py  test_health.py  test_interpolation.py  test_solar_calculator.py
(+25 files in other folders)
